# leomoon-bezier2svg

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bezier2svg/: __init__.py  blender_manifest.toml
bezier2svg/core/: path_builder.py  projection.py  svg.py
bezier2svg/operators/: __init__.py  export_svg.py
bezier2svg/ui/: __init__.py  file_export_menu.py
src/: __init__.py  auto_load.py  controller.py
tests/: test_path_builder.py  test_projection.py  test_smoke.py  test_svg.py
tests/blender/: README.md  _helpers.py  legacy_diff.py  menu_check.py  multi_object.py  smoke.py
