[project]
name = "leomoon-bezier2svg"
version = "2.0.0"
description = "LeoMoon Bezier2SVG — Blender 5.1+ extension"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["legacy", ".venv", "dist", "build", "tests/blender"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "UP",  # pyupgrade
  "SIM", # simplify
]
ignore = [
  "E501", # line length (handled by formatter)
  "B008", # function calls in defaults (Blender bpy.props pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["legacy", "build"]
